--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.30.2",
     "react-scripts": "5.0.1",
+    "recharts": "^3.5.1",
     "styled-components": "^6.1.19",
     "web-vitals": "^2.1.4"
   },
